--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,18 @@
 [submodule "magit"]
 	path = magit
-	url = git@github.com:magit/magit.git
+	url = https://github.com/magit/magit.git
 [submodule "git-modes"]
 	path = git-modes
-	url = git@github.com:magit/git-modes.git
+	url = https://github.com/magit/git-modes.git
 [submodule "direx-el"]
 	path = direx-el
-	url = git@github.com:Kikuchi-M/direx-el.git
+	url = https://github.com/Kikuchi-M/direx-el.git
 [submodule "auto-complete"]
 	path = auto-complete
-	url = git@github.com:auto-complete/auto-complete.git
+	url = https://github.com/auto-complete/auto-complete.git
 [submodule "popup-el"]
 	path = popup-el
 	url = git@github.com:auto-complete/popup-el.git
-[submodule "emacs.qml-mode"]
-	path = emacs.qml-mode
-	url = git@github.com:Kikuchi-M/emacs.qml-mode.git
 [submodule "qml-mode"]
 	path = qml-mode
-	url = git@github.com:Kikuchi-M/qml-mode.git
+	url = https://github.com/Kikuchi-M/qml-mode.git
