--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "gdb-debugger"]
 	path = gdb-debugger
 	url = https://github.com/Kikuchi-M/gdb-debugger.git
+[submodule "g-compile"]
+	path = g-compile
+	url = https://github.com/Kikuchi-M/g-compile.git
